--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -17,10 +17,12 @@
     "@tanstack/react-query": "^5.70.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
