--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "react-material-ui-carousel": "^3.4.2",
     "axios": "^1.8.4",
+    "lucide-react": "^0.487.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.4.1"
   }
 }
