--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@huggingface/inference": "^3.6.2",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@tanstack/react-query": "^5.70.0",
