--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "hls.js": "^1.6.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "passport": "^0.7.0",
