--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -15,11 +15,14 @@
     "@huggingface/inference": "^3.6.2",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.70.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "hls.js": "^1.6.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
