--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -15,6 +15,8 @@
     "@huggingface/inference": "^3.6.2",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.70.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
@@ -23,7 +25,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "react-use-gesture": "^9.1.3",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
