--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,11 +13,17 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.779.0",
+    "@react-oauth/google": "^0.12.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "hls.js": "^1.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "type": "module",
   "devDependencies": {
