--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "hls.js": "^1.6.1",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
