--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.779.0",
+    "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@react-oauth/google": "^0.12.1",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
