--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "seed": "node ./scripts/bulkPushClothes.js"
+    "seed": "node ./scripts/bulkPushClothes.js",
+    "update": "node ./scripts/updateClothes.js",
+    "buy": "node ./scripts/buyClothes.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.779.0",
+    "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@react-oauth/google": "^0.12.1",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
