--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@react-oauth/google": "^0.12.1",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
