--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -15,6 +15,7 @@
     "@huggingface/inference": "^3.6.2",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.70.0",
