--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon server.js",
     "seed": "node ./scripts/bulkPushClothes.js",
     "update": "node ./scripts/updateClothes.js",
-    "buy": "node ./scripts/buyClothes.js"
+    "buy": "node ./scripts/buyClothes.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
