--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,21 +8,22 @@
     "seed": "node ./scripts/bulkPushClothes.js",
     "update": "node ./scripts/updateClothes.js",
     "buy": "node ./scripts/buyClothes.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "generate-thumbnails": "node ./scripts/generateThumbnails.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.779.0",
-    "@aws-sdk/s3-request-presigner": "^3.782.0",
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@react-oauth/google": "^0.12.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
@@ -30,7 +31,8 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.34.1"
   },
   "type": "module",
   "devDependencies": {
