--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "@react-oauth/google": "^0.12.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
+    "backend": "file:",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
