--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "react-use-gesture": "^9.1.3",
+    "se-frontend": "file:",
     "styled-components": "^6.1.17",
     "three": "^0.175.0"
   },
