--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,7 +33,8 @@
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.1",
+    "stripe": "^18.1.0"
   },
   "type": "module",
   "devDependencies": {
