--- a/SE_FrontEnd/package.json
+++ b/SE_FrontEnd/package.json
@@ -18,6 +18,8 @@
     "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-query": "^5.70.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
